# operations

./: README.md  pyproject.toml  settings.py
src/: main.py  utils.py
tests/: test_utils.py
