[tool.poetry]
name = "03-кр-букреева-ольга"
version = "0.1.0"
description = ""
authors = ["Oh Olya <chanfoxx@yandex.ru>"]
readme = "README.md"
packages = [{include = "03_кр_букреева_ольга", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
