[tool.poetry]
name = "03-кр-букреева-ольга"
version = "0.1.0"
description = ""
authors = ["Oh Olya <chanfoxx@yandex.ru>"]
readme = "README.md"
packages = [{include = "03_кр_букреева_ольга", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"
iniconfig = "^2.0.0"
packaging = "^23.1"
pluggy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
